# JPEG

./: README.md
JPEG/: CMakeLists.txt  main.cpp
JPEG/data/: log.txt
JPEG/include/: parsejpeg.h  predef.h
JPEG/src/: APP0.cpp  DHT.cpp  DQT.cpp  SOF.cpp  SOS.cpp  Serial.cpp  parsejpeg.cpp
copy/: main.cpp
copy/include/: parsejpeg.h  predef.h
copy/src/: APP0.cpp  DHT.cpp  DQT.cpp  SOF.cpp  SOS.cpp  Serial.cpp  parsejpeg.cpp
